i am compleate the section menu

--- a/index.html
+++ b/index.html
@@ -5,39 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Agro-Help</title>
 </head>
 <body>
     <div class="body">
         <menu>
-            <ul class="menu__links-section">
-                <li class="menu__link">
-                    <a href="#about">About Us</a>
-                </li>
-                <li class="menu__link"></li>
-                    <a href="#service">Service</a>
-                </li>
-                <li class="menu__link"></li>
-                    <a href="#menu">Menu</a>
-                </li>
-                <li class="menu__link"></li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-            <div class="menu__logo">
-                <img class="menu__img-logo" src="./img/project__logo.png" alt="dont show">
+            <div class="menu__container">
+                <ul class="menu__links-section">
+                    <li class="menu__link">
+                        <a href="#about">About Us</a>
+                    </li>
+                    <li class="menu__link">
+                        <a href="#service">Service</a>
+                    </li>
+                    <li class="menu__link">
+                        <a href="#menu">Menu</a>
+                    </li>
+                    <li class="menu__link">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <div class="menu__logo">
+                    <img class="menu__img-logo" src="./img/project__logo.png" alt="dont show">
+                </div>
+                <div class="menu__sign">
+                    <div class="menu__search">
+                        <i class="bi bi-search"></i>
+                    </div>
+                    <div class="menu__korzinka">
+                        <i class="bi bi-cart-plus"></i>
+                    </div>
+                    <button class="menu__button">
+                        Register Now
+                    </button>
+                </div>
             </div>
-            <div class="menu__sign">
-                <div class="menu__search">
-
-                </div>
-                <div class="menu__korzinka">
-
-                </div>
-                <button class="menu__button">
-                    Register Now
-                </button>
-            </div>  
+              
         </menu>
         <header>
 
