i am copmleateds the section header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,55 @@
               
         </menu>
         <header>
-
+            <div class="header__container">
+                <div class="header__up">
+                    <h1 class="header__title">Organic Fruite & Vegetables</h1>
+                    <p class="header__paragraph">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley...
+                    </p>
+                    <div class="header__order">
+                        <h6 class="header__order-text">Order Now</h6>
+                        <span class="header__order-button">
+                            <i class="bi bi-arrow-right"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="header__down">
+                    <div class="header__img">
+                        <img src="./img/vegetables.png" alt="dont shown">
+                    </div>
+                    <ul class="header__info">
+                        <li class="header__card">
+                            <div class="header__left-card">
+                                <i class="bi bi-person-fill"></i>
+                            </div>
+                            <div class="header__right-card">
+                                <h3>30K</h3>
+                                <h6>User Order</h6>
+                            </div>
+                        </li>
+                        <li class="header__card">
+                            <div class="header__left-card">
+                                <i class="bi bi-star-fill"></i>
+                            </div>
+                            <div class="header__right-card">
+                                <h3>20K</h3>
+                                <h6>Reviews(4.8)</h6>
+                            </div>
+                        </li>
+                        <li class="header__card">
+                            <div class="header__left-card">
+                                <i class="bi bi-diagram-3-fill"></i>
+                            </div>
+                            <div class="header__right-card">
+                                <h3>300</h3>
+                                <h6>items</h6>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
         </header>
     </div>    
 </body>
