i am copleate the section of about and start section services

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="body">
+        <!-- menu -->
         <menu>
             <div class="menu__container">
                 <ul class="menu__links-section">
@@ -43,7 +44,9 @@
             </div>
               
         </menu>
+        <!-- header -->
         <header>
+            <img class="header__leaves" src="./img/laeves.png" alt="dontshow">
             <div class="header__container">
                 <div class="header__up">
                     <h1 class="header__title">Organic Fruite & Vegetables</h1>
@@ -94,6 +97,53 @@
             </div>
             
         </header>
+        <!-- section about -->
+        <section id="about" class="about">
+            <div class="about__container">
+                <h1 class="about_-title">Why We Aer The Best?</h1>
+                <p class="about__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley...</p>
+                <ul class="about__content">
+                    <li class="about__left">
+                        <ul class="about__cards">
+                            <li class="about__card">
+                                <div class="about__icon">
+                                    <i class="bi bi-truck"></i>
+                                </div>
+                                <div class="about__card-info">
+                                    <h4 class="about__title-info">Fasted delivery Service</h4>
+                                    <h5 class="about__subtitle-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
+                                </div>
+                            </li>
+                            <li class="about__card">
+                                <div class="about__icon">
+                                    <i class="bi bi-truck"></i>
+                                </div>
+                                <div class="about__card-info">
+                                    <h4 class="about__title-info">Fasted delivery Service</h4>
+                                    <h5 class="about__subtitle-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
+                                </div>
+                            </li>
+                            <li class="about__card">
+                                <div class="about__icon">
+                                    <i class="bi bi-truck"></i>
+                                </div>
+                                <div class="about__card-info">
+                                    <h4 class="about__title-info">Fasted delivery Service</h4>
+                                    <h5 class="about__subtitle-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="about__right">
+                        <img src="./img/man__sailor.png" alt="not found">
+                    </li>
+                </ul>
+            </div>    
+        </section>
+        <!-- section Services -->
+        <section class="services" id="services">
+
+        </section>
     </div>    
 </body>
 </html>
