i am compleated the section services and start section menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a href="#about">About Us</a>
                     </li>
                     <li class="menu__link">
-                        <a href="#service">Service</a>
+                        <a href="#services">Service</a>
                     </li>
                     <li class="menu__link">
                         <a href="#menu">Menu</a>
@@ -116,19 +116,19 @@
                             </li>
                             <li class="about__card">
                                 <div class="about__icon">
-                                    <i class="bi bi-truck"></i>
+                                    <i class="bi bi-journal-text"></i>
                                 </div>
                                 <div class="about__card-info">
-                                    <h4 class="about__title-info">Fasted delivery Service</h4>
+                                    <h4 class="about__title-info">Online order Service</h4>
                                     <h5 class="about__subtitle-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
                                 </div>
                             </li>
                             <li class="about__card">
                                 <div class="about__icon">
-                                    <i class="bi bi-truck"></i>
+                                    <i class="bi bi-stopwatch"></i>
                                 </div>
                                 <div class="about__card-info">
-                                    <h4 class="about__title-info">Fasted delivery Service</h4>
+                                    <h4 class="about__title-info">24/8 Service</h4>
                                     <h5 class="about__subtitle-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
                                 </div>
                             </li>
@@ -142,7 +142,26 @@
         </section>
         <!-- section Services -->
         <section class="services" id="services">
-
+            <ul class="services__conatiner">
+                <li class="services__left">
+                    <img src="./img/exploring.png" alt="dont shown">
+                </li>
+                <li class="services__right">
+                    <h1 class="services__title">Explor Our Special Items</h1>
+                    <p class="services__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer...</p>
+                    <div class="services__order">
+                        <h6 class="services__order-text">Order Now</h6>
+                        <span class="services__order-button">
+                            <i class="bi bi-arrow-right"></i>
+                        </span>
+                    </div>
+                </li>   
+            </ul>
+            <img class="services__laeves" src="./img/laeves.png" alt="not-found">
+        </section>
+        <!-- section menu -->
+        <section class="menu" id="menu">
+            
         </section>
     </div>    
 </body>
