i am compleate the menu section and starting contact section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,33 @@
         </section>
         <!-- section menu -->
         <section class="menu" id="menu">
-            
+            <ul class="s-menu-container">
+                <li class="s-menu__left">
+                    <h1 class="s-menu__title">What Our Customers About Us saying</h1>
+                    <p class="s-menu__subtitle">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularis
+                    </p>
+                    <ul class="s-menu__foot">
+                        <li class="s-menu__left-foot">
+                            <h6 class="s-menu__name">Ahmed Hridoy</h6>
+                            <ul class="s-menu__stars">
+                                <li class="s-menu__star"><i class="bi bi-star-fill"></i></li>
+                                <li class="s-menu__star"><i class="bi bi-star-fill"></i></li>
+                                <li class="s-menu__star"><i class="bi bi-star-fill"></i></li>
+                                <li class="s-menu__star"><i class="bi bi-star-fill"></i></li>
+                                <li class="s-menu__star"><i class="bi bi-star-half"></i></li>
+                            </ul>
+                        </li>
+                        <ul class="s-menu__right-foot">
+                            <li class="s-menu-btn"><i class="bi bi-chevron-left"></i></li>
+                            <li class="s-menu-btn"><i class="bi bi-chevron-right"></i></li>
+                        </ul>
+                    </ul>
+                </li>
+                <li class="s-menu__right">
+                    <img src="./img/man__boss.png" alt="not-found">
+                </li>
+            </ul>
         </section>
     </div>    
 </body>
