i am compleate the contact section and starting footer

--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@
                 </li>
             </ul>
         </section>
+        <!-- contact -->
+        <section class="contact" id="contact">
+            <ul class="contact__container">
+                <li class="contact__left">
+                    <img src="./img/mobile__phones.png" alt="not-found">
+                </li>
+                <li class="contact__right"> 
+                    <button class="contact__btn">Download App</button>
+                    <h1 class="contact__title">Simple Way To Order Your Organic Fruit </h1>
+                    <p class="contact__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer...</p>
+                    
+                </li>
+            </ul>
+        </section>
     </div>    
 </body>
 </html>
