i am compleate section footer in addition all of the project but halen has mobiling

--- a/index.html
+++ b/index.html
@@ -199,10 +199,43 @@
                     <button class="contact__btn">Download App</button>
                     <h1 class="contact__title">Simple Way To Order Your Organic Fruit </h1>
                     <p class="contact__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer...</p>
-                    
+
                 </li>
             </ul>
         </section>
+        <!-- footer -->
+        <footer>
+            <ul class="footer__container">
+                <li class="footer__info">
+                    <div class="footer__logo">
+                        <img src="./img/project__logo.png" alt="not-found">
+                    </div>
+                    <p class="footer__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer...</p>
+                </li>
+                <ul class="navigation">
+                    <li class="nav__title">Navigation</li>
+                    <li>About Us</li>
+                    <li>Services</li>
+                    <li>Menu</li>
+                    <li>Contact</li>
+                </ul>
+                <ul class="resources">
+                    <li class="nav__title">Resources</li>
+                    <li>Reviews</li>
+                    <li>Blog</li>
+                    <li>Update New</li>
+                </ul>
+                <ul class="foot-contact">
+                    <li class="nav__title">Contact</li>
+                    <li>Email: example@gmail.com</li>
+                    <ul class="social-nets">
+                        <li><i class="bi bi-facebook"></i></li>
+                        <li><i class="bi bi-twitter"></i></li>
+                        <li><i class="bi bi-instagram"></i></li>
+                    </ul>
+                </ul>
+            </ul>
+        </footer>
     </div>    
 </body>
 </html>
